--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <title><%= subject.name %></title>
     <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
@@ -39,6 +40,7 @@
             method="POST"
             onsubmit="return confirm('Willst du dieses Fach wirklich löschen?');">
 
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="hidden" name="id" value="<%= subject.id %>">
             <button type="submit" class="delete-btn">Fach löschen</button>
         </form>
