--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -32,6 +32,7 @@
     <div class="top-banner">
         <h1>Hallo <%= currentUser ? currentUser.prename + ' ' + currentUser.lastname : 'Nutzer' %></h1>
         <form id="addSubjectForm" action="/subjects/add" method="POST" class="hidden">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="text" name="name" placeholder="Fachname" required>
             <button id="addSubjectBtn" type="submit">Erstellen</button>
         </form>
